2008-06-28  Guillem Jover  <guillem@debian.org>

	* lib/mlib.c (checksubprocerr): Move the PROCNOERR check before
	the reporting, and exit directly instead in case of error.

2008-06-28  Guillem Jover  <guillem@debian.org>

	* lib/ehandle.c (badusage): Use ohshit instead of its own error
	handling.

2008-06-28  Guillem Jover  <guillem@debian.org>

	* src/query.c (printforhelp): Remove trailing newlines.

2008-06-27  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/build.c (do_build): Move string translation markers outside
	of the string.
	* src/help.c (ensure_pathname_nonexisting): Localize the 'failed'
	variable instead of expecting gettext to magically infer the formatted
	string.
	* src/processarc.c (process_archive): Likewise.

2008-06-27  Raphael Hertzog  <hertzog@debian.org>

	* scripts/install-info.pl: Improve error message when the
	info file doesn't exist.

2008-06-23  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-source.pl: New option --require-valid-signature.
	* scripts/Dpkg/Source/Package.pm (check_signature): Updated to use
	Dpkg::IPC and to implement the checks related to
	--require-valid-signature.
	* man/dpkg-source.1: Document the new option.

2008-06-23  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/IPC.pm (fork_and_exec): New nocheck option that is
	forwarded to wait_child().

2008-06-23  Timothy G Abbott  <tabbott@MIT.EDU>

	* scripts/dpkg-divert.pl: Add new option --listpackage to
	dpkg-divert.
	* man/dpkg-divert.1: Document new option.

2008-06-22  Raphael Hertzog  <hertzog@debian.org>

	* man/dpkg.1, man/dpkg-query.1: Clarify lisf of packages displayed
	in dpkg --get-selections and dpkg-query -l.

2008-06-21  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-shlibdeps.pl: If the binary analyzed is a library on a
	non-public path, assume it's likely a plugin and reduce the number of
	warnings displayed about symbols not found. Also use a different,
	hopefully less confusing message.