@@ -1,5 +1,11 @@
 2008-06-28  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg.h (onerr_abort): Move declaration to the ehandle.c section.
+	* lib/mlib.c (onerr_abort): Move definition ...
+	* lib/ehandle.c: ... here.
+
+2008-06-28  Guillem Jover  <guillem@debian.org>
+
 	* lib/mlib.c (checksubprocerr): Move the PROCNOERR check before
 	the reporting, and exit directly instead in case of error.
 
